# mcp-atlassian

./: .gitignore  README.md  aitestplan.md  pyproject.toml  test_mcp copy.py  test_mcp.py
src/mcp_atlassian/: __init__.py  attachments.py  config.py  confluence.py  content.py  content_advanced.py  draw_io_handler.py  jira.py  search.py  server.py
src/mcp_atlassian/tool_handlers/: __init__.py  confluence_tools.py  draw_io_tools.py  jira_tools.py
testlive/: aitestplan.md  test_delete_live.py  test_live copy.py  test_live.py  test_live_advance_edit.py  test_live_advanced_formatting.py  test_live_ai_content_editing.py  test_live_ai_interface.py  test_live_ai_professional_docs.py  test_live_ai_project_management.py  test_live_ai_templates.py
tests/: conftest.py  mocks.py
tests/mcp_atlassian/: test_attachments.py  test_config.py  test_confluence.py  test_content.py  test_jira.py  test_search.py  test_types.py
